<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasarDatosAgenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="name">Nombre</string>
    <string name="añadir">Añadir</string>
    <string name="nameEditar">Contacto a editar</string>
    <string name="editar">Editar</string>
    <string name="ok">OK</string>
    <string name="tlf">Teléfono</string>
    <string name="tostada">El contacto ha sido actualizado a:</string>
    <string name="title_activity_my_activity__intermedia">MyActivity_Intermedia</string>
    <string name="mostrar">Mostrar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_borrar">Borrar</string>
    <string name="nameB">Nombre</string>

</resources>
