<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/entradaNombre2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/textViewtlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tlf" />

    <EditText
        android:id="@+id/entradaTlf2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/bOk"
        android:gravity="center"
        android:layout_gravity="" />

</LinearLayout>
